[gd_scene load_steps=12 format=3 uid="uid://b3o3wo40sfih1"]

[ext_resource type="Script" path="res://core/ui/card_ui/gamepad/gamepad_mapper.gd" id="1_alala"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="2_4osef"]
[ext_resource type="Resource" uid="uid://c4er7pfmn7x50" path="res://assets/state/state_machines/gamepad_settings_state_machine.tres" id="3_wgp64"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="4_scwwv"]
[ext_resource type="Resource" uid="uid://46cu324n427u" path="res://assets/state/states/gamepad_change_input.tres" id="4_sv30y"]
[ext_resource type="PackedScene" uid="uid://uljtdvmuol3l" path="res://core/systems/input/focus_group_setter.tscn" id="5_i6uqd"]
[ext_resource type="PackedScene" uid="uid://ccd4sw84h1qbc" path="res://core/systems/input/back_input_handler.tscn" id="5_roi3c"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="9_0om7o"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="9_an8os"]
[ext_resource type="Texture2D" uid="uid://d284wkmo0vqfk" path="res://addons/controller_icons/assets/xbox360/a.png" id="10_g6xyt"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="10_w3t8m"]

[node name="GamepadMapper" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_alala")

[node name="StateWatcher" parent="." instance=ExtResource("2_4osef")]
state = ExtResource("4_sv30y")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("4_scwwv")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="FocusGroupSetter" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("5_i6uqd")]
target = NodePath("../../VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer/FocusGroup")
on_signal = "state_entered"

[node name="BackInputHandler" parent="." instance=ExtResource("5_roi3c")]
state_machine = ExtResource("3_wgp64")
process_input_during = Array[Resource("res://core/systems/state/state.gd")]([ExtResource("4_sv30y")])
minimum_states = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ChangeInputContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ChangeInputContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ChangeInputContainer/MarginContainer"]
layout_mode = 2

[node name="SubsectionLabel" parent="VBoxContainer/ChangeInputContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_0om7o")]
layout_mode = 2
text = "Change Input"
horizontal_alignment = 1

[node name="InputTexture" type="TextureRect" parent="VBoxContainer/ChangeInputContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_g6xyt")
expand_mode = 1
stretch_mode = 5

[node name="InputTypeContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InputTypeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/InputTypeContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="FocusGroup" parent="VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("9_an8os")]
current_focus = NodePath("../KeyboardButton")

[node name="KeyboardButton" parent="VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Keyboard"
uppercase = false

[node name="MouseButton" parent="VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Mouse"
uppercase = false

[node name="GamepadButton" parent="VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Gamepad"
uppercase = false

[node name="ClearButton" parent="VBoxContainer/InputTypeContainer/MarginContainer/ButtonContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"
uppercase = false

[node name="MouseContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MouseContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MouseContainer/MarginContainer"]
layout_mode = 2

[node name="MouseFocusGroup" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("9_an8os")]
unique_name_in_owner = true
current_focus = NodePath("../LeftClickButton")

[node name="LeftClickButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Left Click"
uppercase = false

[node name="RightClickButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Right Click"
uppercase = false

[node name="MouseMotionButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Mouse Motion"
uppercase = false

[node name="WheelUpButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Wheel Up"
uppercase = false

[node name="WheelDownButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Wheel Down"
uppercase = false

[node name="MiddleClickButton" parent="VBoxContainer/MouseContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_w3t8m")]
unique_name_in_owner = true
layout_mode = 2
text = "Middle Click"
uppercase = false
